code/human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_20.wast
(assert_invalid
  (module (func $type-value-empty-vs-nums (result i32 i32)
    (loop (result i32 i32))
  ))
  "type mismatch"
)